// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Push abort on push with clientCertificate.certPath used in cloud 1`] = `
"Aborted. Invalid synthetics project settings.

Certificate path options (certPath, keyPath, pfxPath) are not supported on cloud locations, use in-memory alternatives (cert, key, pfx) when running on cloud.

Run 'npx @elastic/synthetics init' to create project with default settings.
"
`;

exports[`Push abort on push with clientCertificate.keyPath used in cloud 1`] = `
"Aborted. Invalid synthetics project settings.

Certificate path options (certPath, keyPath, pfxPath) are not supported on cloud locations, use in-memory alternatives (cert, key, pfx) when running on cloud.

Run 'npx @elastic/synthetics init' to create project with default settings.
"
`;

exports[`Push abort on push with clientCertificate.pfxPath used in cloud 1`] = `
"Aborted. Invalid synthetics project settings.

Certificate path options (certPath, keyPath, pfxPath) are not supported on cloud locations, use in-memory alternatives (cert, key, pfx) when running on cloud.

Run 'npx @elastic/synthetics init' to create project with default settings.
"
`;

exports[`Push error on empty project id 1`] = `
"Aborted. Invalid synthetics project settings.

Set project id via
  - CLI '--id <id>'
  - Config file 'project.id' field

Run 'npx @elastic/synthetics init' to create project with default settings.
"
`;

exports[`Push error on invalid location 1`] = `
"Aborted. Invalid synthetics project settings.

Set default location for all monitors via
  - CLI '--locations <values...> or --privateLocations <values...>'
  - Config file 'monitors.locations' | 'monitors.privateLocations' field

Run 'npx @elastic/synthetics init' to create project with default settings.
"
`;

exports[`Push error on invalid schedule 1`] = `
"Aborted. Invalid synthetics project settings.

Set default schedule(12) to one of the allowed values - 1,2,3,5,10,15,20,30,60,120,240

Run 'npx @elastic/synthetics init' to create project with default settings.
"
`;

exports[`Push error when schedule is not present 1`] = `
"Aborted. Invalid synthetics project settings.

Set default schedule in minutes for all monitors via
  - CLI '--schedule <mins>'
  - Config file 'monitors.schedule' field

Run 'npx @elastic/synthetics init' to create project with default settings.
"
`;

exports[`Push format duplicate monitors 1`] = `
"Aborted: Duplicate monitors found
   * test - journey1.ts:2:5
   * test - journey2.ts:10:5
   "
`;
